tests/sumo/errors/invalid_bool/errors.sumo
Error: While processing option 'verbose':
 'invalidInput' is not a valid bool.
Error: Could not parse commandline options.
Quitting (on error).
